Finish close button for dialog and fix some alignment issues

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -26,3 +26,7 @@ body {
 .spacer {
 	margin: auto;
 }
+
+p {
+	margin: 0.75rem;
+}
